# demoforqmllswhatsnew66

./: CMakeLists.txt  Main.qml  main.cpp
MyModule/: CMakeLists.txt  MyComponent.qml
